fix: update actor name to zipcode-cdp-lookup for Apify deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cdp-lookup",
+  "name": "zipcode-cdp-lookup",
   "version": "1.0.0",
   "description": "CDP API Lookup - Real Estate Listing API for Apify",
   "main": "dist/server.js",
