major: replace RapidAPI with direct Zillow and Realtor.com API integration
- Remove all RapidAPI dependencies and code
- Implement direct API integration with Zillow.com GraphQL endpoints
- Implement direct API integration with Realtor.com internal APIs
- Convert from TypeScript to JavaScript for simpler deployment
- Update Apify actor configuration for new architecture
- Remove unnecessary build steps and dependencies
- Maintain all existing endpoints with improved data sources
- Add data merging from multiple sources for comprehensive coverage

--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "zipcode-cdp-lookup",
-  "version": "1.0.0",
-  "description": "CDP API Lookup - Real Estate Listing API for Apify",
+  "version": "2.0.0",
+  "description": "CDP API Lookup - Direct Real Estate API Integration for Zillow and Realtor.com",
   "type": "module",
-  "main": "dist/server.js",
+  "main": "src/main.js",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/server.js",
-    "dev": "ts-node src/server.ts",
-    "lint": "eslint src/**/*.ts",
+    "start": "node src/main.js",
+    "dev": "node --watch src/main.js",
+    "lint": "eslint src/**/*.js",
     "test": "jest"
   },
   "keywords": [
